--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: localhost
   connection: local
-  gather_facts: no
+  gather_facts: false
 
   vars_files: config.yml
 
@@ -11,21 +11,25 @@
       customerUri: "{{ sectigo_customerUri }}"
       login: "{{ sectigo_login }}"
       password: "{{ sectigo_password }}"
-    confirm: True
+    # defaults, to be overriden in config.yml
+    confirm: true
+    sectigo_email_map: []
+    sectigo_drop_san_patterns: []
 
   tasks:
+
     - name: Fetch certificate profiles from Sectigo API
       uri:
         url: "https://cert-manager.com/api/ssl/v1/types?organizationId={{ sectigo_orgId }}"
         method: GET
-        return_content: yes
+        return_content: true
         headers: "{{ sectigo_headers }}"
       register: profiles
-      tags: never,profile      
+      tags: never,profile
 
     - debug:
         var: profiles.json
-      tags: never,profile      
+      tags: never,profile
 
     - name: Process certificate orders
       include_tasks: _cert.yml
